refactor: split string docs into multiple files
Split timeline.md into:
- index.md - overview and navigation
- implementation.md - Compact Strings, StringLatin1, StringUTF16
- optimization.md - String Deduplication, VM tuning, best practices
- timeline.md - clean, concise timeline

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>